--- a/courier.html
+++ b/courier.html
@@ -102,9 +102,9 @@
 
                 <div class="contenido-video">
                     <div class="frame-video">
-                        <video id='boxvid' controls>
+                        <video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/courier.mp4" type="video/mp4">
-                        </video>                   
+                        </video>
                     </div>
                 </div>
             </div><!-- content -->
@@ -184,7 +184,8 @@
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
-		slider();
+		stopLocalVideo();
+        slider();
 	</script>
 </body>
 </html>
