--- a/digipix.html
+++ b/digipix.html
@@ -94,7 +94,7 @@
 
                 <div class="contenido-video">
                     <div class="frame-video">
-                        <video id='boxvid' controls>
+                        <video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/digipix.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -177,6 +177,7 @@
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
 		slider();
+        stopLocalVideo();
 	</script>
 </body>
 </html>
