--- a/eshuis.html
+++ b/eshuis.html
@@ -104,7 +104,7 @@
                 </div>
                 <div class="contenido-video">
                     <div class="frame-video video">
-                        <video controls="controls">
+                        <video class="[ video-local ]" controls>
                             <source src="vid/eshuis.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -203,6 +203,7 @@
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
+        stopLocalVideo();
         slider();
     </script>
 </body>
