--- a/ibs-de-mexico.html
+++ b/ibs-de-mexico.html
@@ -95,7 +95,7 @@
 
                 <div class="contenido-video">
                     <div class="frame-video">
-                        <video id='boxvid' controls>
+                        <video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/w7250.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -177,7 +177,8 @@
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
-		slider();
+		stopLocalVideo();
+        slider();
 	</script>
 </body>
 </html>
