--- a/impresion.html
+++ b/impresion.html
@@ -60,9 +60,7 @@
                         </a></li>
                     </ul>
                 </div><!-- sub_menu -->
-
                 <div class="main-content left">
-
                     <div class="seccion-segmento" id="aplicaciones">
                     	<ul>
                         	<li><a href="#" id="brochures">Brochures y manuales</a></li>
@@ -82,20 +80,16 @@
                             <li><a href="W7250.html">HP Indigo W7250</a></li>
                         </ul>
                     </div><!-- seccion-segmento -->
-
                     <div class="seccion-segmento video" id="tendencias">
-                    	<video controls>
+                    	<video class="[ video-local ]" controls>
                             <source src="vid/a-impresion.mp4" type="video/mp4">
                         </video>
                     </div>
-
                     <div class="seccion-segmento video" id="videos">
-                        <video controls>
+                        <video class="[ video-local ]" controls>
                             <source src="vid/impresion.mp4" type="video/mp4">
                         </video>
                     </div><!-- video -->
-
-
                 </div><!-- main_content -->
             </div><!-- content -->
 			<div class="lightbox-container">
@@ -147,9 +141,7 @@
                     </li>
                 </ul>
             </div><!-- menu-vertical -->
-
             <div class="clear"></div>
-
             <ul class="menu-horizontal clearfix">
                 <li>
                     <a href="index.html" class="activo">
@@ -157,7 +149,6 @@
                         <p>Home</p>
                     </a>
                 </li>
-
                 <li>
                     <a href="historias.html">
                         <img src="images/casos_de_estudio.png" alt="Historias de éxito">
@@ -170,14 +161,12 @@
                         <p>Habilitadores</p>
                     </a>
                 </li>
-
                 <li>
                     <a href="prensas.html">
                         <img src="images/prensas_digitales.png" alt="Prensas digitales">
                         <p>Prensas digitales</p>
                     </a>
                 </li>
-
                 <li>
                     <a href="adicionales.html">
                         <img src="images/adicional.png" alt="Adicional">
@@ -187,12 +176,12 @@
             </ul> <!-- menu-horizontal -->
         </div><!-- main -->
     </div><!--container-->
-
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
 		lightboxImg();
+        stopLocalVideo();
 	</script>
 </body>
 </html>
