--- a/kyodo-creations.html
+++ b/kyodo-creations.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="contenido-video">
                     <div class="frame-video">
-                         <video id='boxvid' controls>
+                         <video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/kyodo.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -181,7 +181,8 @@
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
-		slider();
+		stopLocalVideo();
+        slider();
 	</script>
 </body>
 </html>
