--- a/orwo.html
+++ b/orwo.html
@@ -96,12 +96,12 @@
 
                 <div class="contenido-video">
                     <div class="frame-video">
-                        <video id='boxvid' controls>
+                        <video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/orwo.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
-                
+
             </div><!-- content -->
             <div class="menu-vertical right">
                 <ul>
@@ -179,6 +179,7 @@
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
+        stopLocalVideo();
 		slider();
 	</script>
 </body>
