--- a/communisis.html
+++ b/communisis.html
@@ -99,7 +99,7 @@
 
                 <div class="contenido-video">
                     <div class="frame-video">
-                        <video id='boxvid' controls>
+                        <video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/communisis.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -181,6 +181,7 @@
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
+        stopLocalVideo();
         slider();
     </script>
 </body>
