--- a/digital-print.html
+++ b/digital-print.html
@@ -103,7 +103,7 @@
                 </div>
                 <div class="contenido-video">
                     <div class="frame-video">
-                        <video id='boxvid' controls>
+                        <video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/digital.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -185,7 +185,8 @@
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
-		slider();
+		stopLocalVideo();
+        slider();
 	</script>
 </body>
 </html>
