--- a/emp_carton.html
+++ b/emp_carton.html
@@ -5,10 +5,8 @@
     <link rel="apple-touch-icon" href="images/favicon.png"/>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
     <meta name="viewport" content="initial-scale=1, maximum-scale=2">
-
     <meta charset="UTF-8">
     <title>HP Indigo | Empaque Cartón</title>
-
     <!--[if lt IE 9]>
         <script src="dist/html5shiv.js"></script>
     <![endif]-->
@@ -37,27 +35,22 @@
                         <p>Aproveche las capacidades que le situar&acute;n en una posici&oacute;n privilegiada frente a la competencia, de tiempos de respuesta r&aacute;pidos y tiradas cortas a resultados constantes con calidad offset. HP Indigo junta la velocidad y la calidad para unas soluciones de cartones plegables de gran relaci&oacute;n calidad y precio.</p>
                     </div><!-- info_aplicacion -->
                 </div><!-- descripcion -->
-
                 <div class="left" id="menu_segmentos">
                     <ul>
                         <li><a href="#" id="tendenciasLink">
                             Tendencias
                         </a></li>
-
                         <li><a href="#" id="solucionesLink">
                             Soluciones
                         </a></li>
-
                         <li><a href="#" id="aplicacionesLink">
                             Aplicaciones
                         </a></li>
-
                         <li><a href="#" id="videosLink">
                             Videos
                         </a></li>
                     </ul>
                 </div><!-- sub_menu -->
-
                 <div class="main-content left">
                     <div class="seccion-segmento" id="aplicaciones">
                     	<ul>
@@ -75,12 +68,12 @@
                         </ul>
                     </div>
                     <div class="seccion-segmento video" id="tendencias">
-                    	<video id='boxvid' controls>
+                    	<video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/a-carton.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="seccion-segmento video" id="videos">
-                        <video id='boxvid' controls>
+                        <video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/carton.mp4" type="video/mp4">
                         </video>
                     </div><!-- videos -->
@@ -176,6 +169,7 @@
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
+        stopLocalVideo();
 		lightboxImg();
 	</script>
 </body>
