--- a/emp_flexible.html
+++ b/emp_flexible.html
@@ -5,15 +5,13 @@
     <link rel="apple-touch-icon" href="images/favicon.png"/>
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
     <meta name="viewport" content="initial-scale=1, maximum-scale=2">
-
     <meta charset="UTF-8">
     <title>HP Indigo | Empaque Flexible</title>
-
     <!--[if lt IE 9]>
         <script src="dist/html5shiv.js"></script>
     <![endif]-->
 </head>
-<body >
+<body>
     <div class="container clearfix">
         <header>
              <div class="logo">
@@ -37,7 +35,6 @@
                         <p>Obtenga una ventaja distintiva frente a la producci&oacute;n de embalajes flexibles convencional con flujos de trabajo completamente digitales y una calidad de impresión equivalente a grabado: todo sin tener que configurar planchas. HP Indigo puede ayudar a reducir los plazos de espera, inventarios y residuos al mismo tiempo que proporciona un color impresionante en una amplia variedad de sustratos finos y gruesos.</p>
                     </div><!-- info_aplicacion -->
                 </div><!-- descripcion -->
-
                 <div class="left" id="menu_segmentos">
                     <ul>
                         <li><a href="#" id="tendenciasLink">
@@ -74,12 +71,12 @@
                         </ul>
                     </div>
                     <div class="seccion-segmento video" id="tendencias">
-                    	<video id='boxvid' controls>
+                    	<video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/a-empaque.mp4" type="video/mp4">
                         </video>
                     </div>
                     <div class="seccion-segmento video" id="videos">
-                        <video id='boxvid' controls>
+                        <video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/flexible.mp4" type="video/mp4">
                         </video>
                     </div><!-- videos -->
@@ -177,6 +174,7 @@
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
 		lightboxImg();
+        stopLocalVideo();
 	</script>
 </body>
 </html>
