--- a/lombarda.html
+++ b/lombarda.html
@@ -43,7 +43,7 @@
                         	<p><a href="#" class="boton-prensa" id="video">Ver video</a></p>
                         </li>
                         <li>
-                        	<p><a href="pdf/Rotolito.pdf" target="_new" class="boton-prensa" id="pdf">Descargar PDF</a></p>
+                        	<p><a href="pdf/rotolito.pdf" target="_new" class="boton-prensa" id="pdf">Descargar PDF</a></p>
                         </li>
                     </ul>
                 </div>
@@ -101,7 +101,7 @@
 
                 <div class="contenido-video">
                     <div class="frame-video">
-                	   <video id='boxvid' controls>
+                	   <video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/rotolito.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -183,7 +183,8 @@
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
-		slider();
+		stopLocalVideo();
+        slider();
 	</script>
 </body>
 </html>
