--- a/momento-pro.html
+++ b/momento-pro.html
@@ -97,7 +97,7 @@
 
                 <div class="contenido-video">
                     <div class="frame-video">
-                        <video id='boxvid' controls>
+                        <video id='boxvid' class="[ video-local ]" controls>
                             <source src="vid/momento.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -179,6 +179,7 @@
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
+        stopLocalVideo();
 		slider();
 	</script>
 </body>
