todos los videos \o/

--- a/10000.html
+++ b/10000.html
@@ -174,7 +174,7 @@
             <div class="lightbox-container">
                 <div class="lightbox-media">
                     <div class="frame-video"  class="vimeoWrap">
-                        <video id='boxvid' controls>
+                        <video class="[ video-local ]" id='boxvid' controls>
                              <source src="vid/10000.mp4" type="video/mp4">
                         </video>
                     </div>
@@ -261,11 +261,7 @@
     <script>
 		slider();
         lightboxIFrame();
-		$(document).ready(function(e) {
-            $("#stop").click(function(){
-				stopVimeo('#boxvid');
-			});
-        });
+		stopLocalVideo();
 	</script>
 </body>
 </html>
