--- a/5600.html
+++ b/5600.html
@@ -150,6 +150,9 @@
                             	<a href="7600.html">HP Indigo 7600</a>
                             </li>
                             <li>
+                                <a href="7800.html">HP Indigo 7800</a>
+                            </li>
+                            <li>
                             	<a href="10000.html">HP Indigo 10000</a>
                             </li>
                         </ul>
