--- a/adicionales.html
+++ b/adicionales.html
@@ -112,7 +112,9 @@
                         </div>
                     </div>
                     <div class="seccion-segmento video" id="videos">
-                        <iframe width="560" height="315" src="http://www.youtube.com/embed/8Lg-UeFCZ68" frameborder="0" allowfullscreen></iframe>
+                                    <video class="[ video-local ]" controls>
+                                        <source src="vid/environment.mp4" type="video/mp4">
+                                    </video>
                     </div><!-- videos -->
                     <div class="seccion-segmento" id="prox-lanzamientos">
                     	<div class="contenido-slider">
