--- a/editorial.html
+++ b/editorial.html
@@ -78,6 +78,7 @@
                     	<ul>
                         	<li><a href="5600.html">HP Indigo 5600</a></li>
                             <li><a href="7600.html">HP Indigo 7600</a></li>
+                            <li><a href="7800.html">HP Indigo 7800</a></li>
                             <li><a href="10000.html">HP Indigo 10000</a></li>
                             <li><a href="w7250.html">HP Indigo W7250</a></li>
                             <li><a href="T200.html">HP T200 Color Inkjet Web Press</a></li>
