--- a/10000.html
+++ b/10000.html
@@ -151,6 +151,9 @@
                             <li>
                             	<a href="7600.html">HP Indigo 7600</a>
                             </li>
+                            <li>        
+                                <a href="7800.html">HP Indigo 7800</a>
+                            </li>
                         </ul>
                         <h4>Segmento de especializaci&oacute;n</h4>
                         <ul>
