--- a/7600.html
+++ b/7600.html
@@ -149,6 +149,9 @@
                             	<a href="5600.html">HP Indigo 5600</a>
                             </li>
                             <li>
+                                <a href="7800.html">HP Indigo 7800</a>
+                            </li>
+                            <li>
                             	<a href="10000.html">HP Indigo 10000</a>
                             </li>
                         </ul>
