--- a/WS4600.html
+++ b/WS4600.html
@@ -150,6 +150,7 @@
                         <ul>
                         	<li>
                             	<a href="WS6600.html">HP Indigo WS6600</a>
+                                <a href="WS6800.html">HP Indigo WS6800</a>
                             </li>
                         </ul>
                         <h4>Segmento de especializaci&oacute;n</h4>
@@ -252,7 +253,11 @@
     <script>
 		slider();
         lightboxIFrame();
-		stopVimeo('#boxvid');
+        $(document).ready(function(e) {
+            $("#stop").click(function(){
+                stopVimeo('#boxvid');
+            });
+        });
 	</script>
 </body>
 </html>
