--- a/emp_carton.html
+++ b/emp_carton.html
@@ -32,7 +32,7 @@
                     <img src="images/corrugado_azul.png" alt="" class="icono left">
                     <div class="info_aplicacion left">
                         <h2>Empaque de Cart&oacute;n Plegadizo</h2>
-                        <p>Aproveche las capacidades que le situar&acute;n en una posici&oacute;n privilegiada frente a la competencia, de tiempos de respuesta r&aacute;pidos y tiradas cortas a resultados constantes con calidad offset. HP Indigo junta la velocidad y la calidad para unas soluciones de cartones plegables de gran relaci&oacute;n calidad y precio.</p>
+                        <p>Aproveche las capacidades que le situarán en una posici&oacute;n privilegiada frente a la competencia, de tiempos de respuesta r&aacute;pidos y tiradas cortas a resultados constantes con calidad offset. HP Indigo junta la velocidad y la calidad para unas soluciones de cartones plegables de gran relaci&oacute;n calidad y precio.</p>
                     </div><!-- info_aplicacion -->
                 </div><!-- descripcion -->
                 <div class="left" id="menu_segmentos">
@@ -63,7 +63,9 @@
                     	<ul>
                         	<li><a href="5600.html">HP Indigo 5600</a></li>
                             <li><a href="7600.html">HP Indigo 7600</a></li>
+                            <li><a href="7800.html">HP Indigo 7800</a></li>
                             <li><a href="WS6600.html">HP Indigo WS6600</a></li>
+                            <li><a href="WS6800.html">HP Indigo WS6800</a></li>
                             <li><a href="30000.html">HP Indigo 30000</a></li>
                         </ul>
                     </div>
