--- a/impresion.html
+++ b/impresion.html
@@ -76,6 +76,7 @@
                         	<li><a href="3550.html">HP Indigo 3550</a></li>
                         	<li><a href="5600.html">HP Indigo 5600</a></li>
                             <li><a href="7600.html">HP Indigo 7600</a></li>
+                            <li><a href="7800.html">HP Indigo 7800</a></li>
                             <li><a href="10000.html">HP Indigo 10000</a></li>
                             <li><a href="W7250.html">HP Indigo W7250</a></li>
                         </ul>
