--- a/correo.html
+++ b/correo.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
     <meta name="viewport" content="initial-scale=1, maximum-scale=2">
     <meta charset="UTF-8">
-    <title>HP Indigo | Correo directo e impresión transaccional</title>
+    <title>HP Indigo | Correo directo e Impresión Transaccional</title>
     <!--[if lt IE 9]>
         <script src="dist/html5shiv.js"></script>
     <![endif]-->
@@ -31,10 +31,9 @@
                 <div class="descripcion clearfix">
                     <img src="images/correo_azul.png" alt="" class="icono left">
                     <div class="info_aplicacion left">
-                        <h2>Correo directo e impresi&oacute;n transaccional</h2>
+                        <h2>Correo Directo e Impresi&oacute;n Transaccional</h2>
                         <p>Introduzca un nuevo nivel de eficacia integral, eficiencia de los costes y creatividad en la publicidad directa. La combinación de los datos del cliente y los del mercado con las funciones de datos variables de las prensas digitales de HP proporciona la flexibilidad para crear casi todos los tipos de publicidad.
-Aumente el valor de los envíos de transacciones de los clientes con las prensas digitales de HP. Es fácil para perfeccionar campañas complejas de gran volumen a fin de obtener resultados contundentes con capacidades de impresión de datos variables de HP.
-</p>
+                        Aumente el valor de los envíos de transacciones de los clientes con las prensas digitales de HP. Es fácil para perfeccionar campañas complejas de gran volumen a fin de obtener resultados contundentes con capacidades de impresión de datos variables de HP.</p>
                     </div><!-- info_aplicacion -->
                 </div><!-- descripcion -->
 
@@ -71,7 +70,6 @@ Aumente el valor de los envíos de transacciones de los clientes con las prensas
                     <div class="seccion-segmento" id="soluciones">
                     	<ul>
                         	<li><a href="5600.html">HP Indigo 5600</a></li>
-                            <li><a href="7600.html">HP Indigo 7600</a></li>
                             <li><a href="7800.html">HP Indigo 7800</a></li>
                             <li><a href="10000.html">HP Indigo 10000</a></li>
                             <li><a href="W7250.html">HP Indigo W7250</a></li>
