--- a/editorial.html
+++ b/editorial.html
@@ -33,7 +33,7 @@
                 <div class="descripcion clearfix">
                     <img src="images/editorial_azul.png" alt="" class="icono left">
                     <div class="info_aplicacion left">
-                        <h2>Editorial y publicación de libros</h2>
+                        <h2>Editorial y Publicación de Libros</h2>
                         <p>Proporcione la publicaci&oacute;n que su cliente realmente quiere. Desde tiradas cortas personalizadas hasta cubiertas y fundas llamativas, las prensas digitales de HP ofrecen las funciones, la calidad de resultados y la compatibilidad de medios que usted necesita para producir libros que impresionan incluso a los clientes m&aacute;s exigentes.</p>
                     </div><!-- info_aplicacion -->
                 </div><!-- descripcion -->
@@ -77,7 +77,6 @@
                     <div class="seccion-segmento " id="soluciones">
                     	<ul>
                         	<li><a href="5600.html">HP Indigo 5600</a></li>
-                            <li><a href="7600.html">HP Indigo 7600</a></li>
                             <li><a href="7800.html">HP Indigo 7800</a></li>
                             <li><a href="10000.html">HP Indigo 10000</a></li>
                             <li><a href="w7250.html">HP Indigo W7250</a></li>
