--- a/ercus.html
+++ b/ercus.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=2">
 
     <meta charset="UTF-8">
-    <title>HP Indigo | Margreff</title>
+    <title>HP Indigo | Ercus Packaging</title>
 
     <!--[if lt IE 9]>
         <script src="dist/html5shiv.js"></script>
@@ -31,19 +31,22 @@
         <div class="clearfix">
             <div class="content left clearfix">
                 <div class="panel-historias left">
-                	<h2>Margreff</h2>
-                    <h3>Campaña de efectos especiales con respuesta sin precedentes</h3>
-                    <img class="main_image" src="images/logo/margreff_logo.JPG" />
-                    <a class="regresa clearfix" href="historias.html"><p>Regresar a historias de éxito</p></a>
+                	<h2>Ercus Packaging</h2>
+                    <h3>El trabajo más grande de un sólo site en etiquetas digitales.</h3>
+                    <img class="main_image" src="images/logo/ercus_logo.png" />
+                    <a class="regresa clearfix" href="historias.html"><p>regresar a historias de éxito</p></a>
                     <ul class="botones-historia clearfix">
                     	<li>
                         	<p><a href="#" class="boton-prensa activo" id="caso">Conoce el caso</a></p>
                         </li>
+                        <!--<li>
+                        	<p><a href="#" class="boton-prensa" id="fotos">Ver Fotos</a></p>
+                        </li>-->
                         <li>
-                        	<p><a href="#" class="boton-prensa" id="fotos">Ver fotos</a></p>
+                            <a href="#" class="boton-prensa" id="video">Ver video</a>
                         </li>
                         <li>
-                        	<p><a href="pdf/margreff.pdf" target="_new" class="boton-prensa" id="pdf">Descargar PDF</a></p>
+                        	<p><a href="pdf/ercus.pdf" target="_new" class="boton-prensa" id="pdf">Descargar PDF</a></p>
                         </li>
                     </ul>
                 </div>
@@ -52,67 +55,80 @@
                     	<h3>Rese&ntilde;a</h3>
                         <div class="divisor-azul"></div>
                         <ul>
-                        	<li>Industria: Impresi&oacute;n general comercial</li>
-                            <li>Nombre de la empresa: Margreff Printing and Media Ltd</li>
-                            <li>Oficina sede: Esse, Alemania</li>
-                            <li>Sitio web: margreff.de</li>
+                        	<li>Industria: Etiquetas</li>
+                            <li>Nombre de la empresa: Ercus Packaging</li>
+                            <li>Oficina sede: México D.F.</li>
+                            <li>Sitio web: grupoercus.com</li>
                         </ul>
                     </div>
                     <div class="bloque-contenido left">
                         <h3>&iquest;Cu&aacute;l era el desaf&iacute;o?</h3>
                         <div class="divisor-azul"></div>
                         <ul>
-                            <li>Margreff Printing and Media estaba buscando una manera para establecer y mantener una clara diferencia competitiva con la impresi&oacute;n digital y los efectos especiales</li>
-                            <li>La empresa quer&iacute;a ampliar su capacidad para trabajos de impresi&oacute;n individualizados y a petici&oacute;n, as&iacute; como mejorar la eficiencia de los trabajos de impresi&oacute;n digital</li>
+                            <li>Incrementar la versatilidad técnica y operacional para ofrecer soluciones end-to-end a los clientes.</li>
+                            <li>Expandir las capacidades de impresión en corridas cortas y medianas para alinearse con el 80% de los negocios en México que son PyMES.</li>
+                            <li>Producir el trabajo en un solo site más grande de la historia de la impresión mundial: la campaña "Comparte una Coca-Cola" en México.</li>
                         </ul>
                     </div>
                     <div class="bloque-contenido left">
                     	<h3>Soluci&oacute;n</h3>
                         <div class="divisor-azul"></div>
                         <ul>
-                        	<li>Margreff se pas&oacute; a la nueva Prensa digital HP Indigo 7600, para sus capacidades de efectos especiales y grandes producciones, tales como efectos de impresi&oacute;n y texturas con relieve</li>
-                            <li>La empresa tambi&eacute;n instal&oacute; dos prensas HP Indigo 5000 en el 2006 y en el 2009, que siguen funcionando durante dos turnos todos los d&iacute;as</li>
-                            <li>Margreff utiliza el software HP SmartStream Designer para la impresi&oacute;n de datos variables</li>
+                        	<li>Se utilizaron tres prensas digitales HP Indigo WS6600 con la unidad Inline Priming (ILP) para empaque flexible, principalmente en sustratos sintéticos.</li>
+                            <li>La Prensa Digital HP Indigo 20000 para poder imprimir en formatos más grandes de hasta 73 x 110 cm y una entrega más rápida de los trabajos.</li>
+                            <li>HP SmartStream Production Center para impresión de data variable, logrando la impresión de trabajos personalizados y altamente complejos.</li>
                         </ul>
                     </div>
                     <div class="bloque-contenido left">
                     	<h3>Resultados</h3>
                         <div class="divisor-azul"></div>
                         <ul>
-                        	<li>El aumento de las capacidades para efectos especiales, junto con la impresi&oacute;n digital personalizada de gran capacidad, ayudaron a Margreff a obtener nuevos negocios y a aumentas las tasas de respuesta a las campañas</li>
-                            <li>Gracias a la nueva tecnolog&iacute;a, la empresa vio crecer la impresi&oacute;n digital de un 10% a un 40% de la empresa durante los &uacute;ltimos 2 a 3 años. Esperamos alcanzar un 75% de crecimiento en pocos años</li>
+                        	<li>Crecimiento de un 45% del negocio, todo atribuible a la impresión digital de HP Indigo.</li>
+                            <li>La impresión digital actualmente equivale al 95% del negocio, escalando desde un 75% - 80% dos años atrás.</li>
+                            <li>Ercus Packaging imprimió 650 millones de etiquetas, incorporando data variable con un perfecto emparejamiento de color rojo Coca-Cola, en tres Prensas Digitales HP Indigo WS6600 en menos de 5 meses.</li>
+                            <li>Ercus Packaging pre-vendió el 100% de la capacidad de su primer Prensa Digital HP Indigo 20000 a tan solo unas semanas de su instalación. Una segunda prensa será instalada a mediados de 2015.</li>
                         </ul>
                     </div>
                     <div class="clear"></div>
 
                     <div class="contenido-testimonial">
-                        <p>"Cuando mostramos muestras con efectos especiales, mucha gente no puede creer que son impresos, y mucho menos de forma digital."</p>
-                        <p>— Harald Margreff, Director General de Margreff Printing and Media</p>
+                        <p>“Hay tantas cosas que se pueden hacer de forma digital, como bolsas pouch con VDP y una mayor respuesta. Tenemos a clientes haciendo fila para hacer estos nuevos y más grandes formatos con la HP Indigo 20000."</p>
+                        <p>— Fernando Gómez, Director de operaciones, Ercus Packaging</p>
                     </div>
                     <div class="clear"></div>
                     <div class="link-prensa clearfix">
-                        <p>Prensa(s) utilizada(s): </p>
+                        <p>Prensas utilizadas: </p>
                         <div class="clear"></div>
-                        <a href="7600.html">HP Indigo 7600</a>
+                        <a href="WS6800.html">HP Indigo WS6600</a>
+                        <a href="20000.html">HP Indigo 20000</a>
                     </div><!-- link-prensa -->
 
                 </div>
-                <div class="contenido-fotos">
+                <div class="contenido-video">
+                    <div class="frame-video video">
+                        <video class="[ video-local ]" controls>
+                            <source src="vid/ercus.mp4" type="video/mp4">
+                        </video>
+                    </div>
+                </div>
+                <!--<div class="contenido-fotos">
                 	 <div class="contenido-slider-historias">
                         <div class="slider">
-                            <img src="images/margreff1.JPG" class="slider-item activo" id="1" />
-                            <img src="images/margreff2.JPG" class="slider-item" id="2" />
-                            <img src="images/margreff3.JPG" class="slider-item"  id="3" />
+                            <img src="images/Eshuis1.JPG" class="slider-item activo" id="1" />
+                            <img src="images/Eshuis2.JPG" class="slider-item" id="2" />
+                            <img src="images/Eshuis3.JPG" class="slider-item"  id="3" />
+                            <img src="images/Eshuis4.JPG" class="slider-item"  id="4" />
                             <a href="#" class="flecha-izq left"><img src="images/prev.png" alt="Previous"></a>
                             <a href="#" class="flecha-der right"><img src="images/next.png" alt="Next"></a>
                             <ul class="control-slider">
                                 <li><a href="#" class="activo" id="control-1"></a></li>
                                 <li><a href="#" id="control-2"></a></li>
                                 <li><a href="#" id="control-3"></a></li>
+                                <li><a href="#" id="control-4"></a></li>
                             </ul>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div><!-- content -->
             <div class="menu-vertical right">
                 <ul>
@@ -186,11 +202,11 @@
         </div><!-- main -->
     </div><!--container-->
     <script type="text/javascript" src="js/jquery.js"></script>
-    <script type="text/javascript" src="js/jRespond.js"></script>
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
-		slider();
-	</script>
+        stopLocalVideo();
+        slider();
+    </script>
 </body>
 </html>
