--- a/impresion.html
+++ b/impresion.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=2">
 
     <meta charset="UTF-8">
-    <title>HP Indigo | Impresión general comercial</title>
+    <title>HP Indigo | Impresión General Comercial</title>
 
     <!--[if lt IE 9]>
         <script src="dist/html5shiv.js"></script>
@@ -75,7 +75,6 @@
                     	<ul>
                         	<li><a href="3550.html">HP Indigo 3550</a></li>
                         	<li><a href="5600.html">HP Indigo 5600</a></li>
-                            <li><a href="7600.html">HP Indigo 7600</a></li>
                             <li><a href="7800.html">HP Indigo 7800</a></li>
                             <li><a href="10000.html">HP Indigo 10000</a></li>
                             <li><a href="W7250.html">HP Indigo W7250</a></li>
