--- a/emp_carton.html
+++ b/emp_carton.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
     <meta name="viewport" content="initial-scale=1, maximum-scale=2">
     <meta charset="UTF-8">
-    <title>HP Indigo | Empaque Cartón</title>
+    <title>HP Indigo | Empaque de Cartón Plegadizo</title>
     <!--[if lt IE 9]>
         <script src="dist/html5shiv.js"></script>
     <![endif]-->
@@ -62,9 +62,7 @@
                     <div class="seccion-segmento" id="soluciones">
                     	<ul>
                         	<li><a href="5600.html">HP Indigo 5600</a></li>
-                            <li><a href="7600.html">HP Indigo 7600</a></li>
                             <li><a href="7800.html">HP Indigo 7800</a></li>
-                            <li><a href="WS6600.html">HP Indigo WS6600</a></li>
                             <li><a href="WS6800.html">HP Indigo WS6800</a></li>
                             <li><a href="30000.html">HP Indigo 30000</a></li>
                         </ul>
