--- a/ibs-de-mexico.html
+++ b/ibs-de-mexico.html
@@ -96,7 +96,7 @@
                 <div class="contenido-video">
                     <div class="frame-video">
                         <video id='boxvid' class="[ video-local ]" controls>
-                            <source src="vid/w7250.mp4" type="video/mp4">
+                            <source src="vid/ibs.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
