--- a/medio.html
+++ b/medio.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=2">
 
     <meta charset="UTF-8">
-    <title>HP Indigo | Eshuis</title>
+    <title>HP Indigo | Medio Pliego</title>
 
     <!--[if lt IE 9]>
         <script src="dist/html5shiv.js"></script>
@@ -31,22 +31,19 @@
         <div class="clearfix">
             <div class="content left clearfix">
                 <div class="panel-historias left">
-                	<h2>Eshuis</h2>
-                    <h3>800 millones de Coca-Colas personalizadas</h3>
-                    <img class="main_image" src="images/logo/eshuis_logo.gif" />
-                    <a class="regresa clearfix" href="historias.html"><p>regresar a historias de éxito</p></a>
+                	<h2>Medio Pliego</h2>
+                    <h3>Capturando mercados de altos márgenes</h3>
+                    <img class="main_image" src="images/logo/medio_logo.png" />
+                    <a class="regresa clearfix" href="historias.html"><p>Regresar a historias de éxito</p></a>
                     <ul class="botones-historia clearfix">
                     	<li>
                         	<p><a href="#" class="boton-prensa activo" id="caso">Conoce el caso</a></p>
                         </li>
-                        <!--<li>
-                        	<p><a href="#" class="boton-prensa" id="fotos">Ver Fotos</a></p>
-                        </li>-->
                         <li>
-                            <a href="#" class="boton-prensa" id="video">Ver video</a>
+                        	<p><a href="#" class="boton-prensa" id="video">Ver video</a></p>
                         </li>
                         <li>
-                        	<p><a href="pdf/eshuis.pdf" target="_new" class="boton-prensa" id="pdf">Descargar PDF</a></p>
+                        	<p><a href="pdf/medio.pdf" target="_new" class="boton-prensa" id="pdf">Descargar PDF</a></p>
                         </li>
                     </ul>
                 </div>
@@ -55,74 +52,72 @@
                     	<h3>Rese&ntilde;a</h3>
                         <div class="divisor-azul"></div>
                         <ul>
-                        	<li>Industria: Etiquetas</li>
-                            <li>Nombre de la empresa: Eshuis BV </li>
-                            <li>Oficina sede: Dalfsen, Holanda</li>
-                            <li>Sitio web: eshuis.nl</li>
+                        	<li>Industria: Impresi&oacute;n general comercial</li>
+                            <li>Nombre de la empresa: Medio Pliego</li>
+                            <li>Oficina sede: Saltillo, México</li>
+                            <li>Sitio web: mediopliego.com</li>
                         </ul>
                     </div>
                     <div class="bloque-contenido left">
                         <h3>&iquest;Cu&aacute;l era el desaf&iacute;o?</h3>
                         <div class="divisor-azul"></div>
                         <ul>
-                            <li>Imprimir cientos de millones de etiquetas personalizadas para botellas de Coca-Cola®, Coca-Cola Zero® y Coca-Cola®, con los nombres más comunes en cada país europeo y sin olvidar los exigentes requisitos técnicos, de calidad y de entrega.</li>
-                            <li>La compañía de etiquetas y embalaje Eshuis quería combinar la impresión digital y la convencional en una película adhesiva ultra fina con un color y una calidad de impresión consistentes que cumplieran los estrictos requisitos.</li>
-                            <li>Para ello, era necesario conseguir el mítico color rojo de la etiqueta de Coca-Cola, así como garantizar la coherencia del color en los diversos conversores de etiquetas y prensas digitales.</li>
+                            <li>Crear nuevos y más grandes formatos de producto para promociones y campañas más atractivas.</li>
+                            <li>Eliminar los múltiples y complejos procesos de impresión para correo directo personalizado utilizando impresión convencional en offset.</li>
+                            <li>Crear una tienda en línea con impresión bajo demanda con un flujo de trabajo totalmente automatizado.</li>
                         </ul>
                     </div>
                     <div class="bloque-contenido left">
                     	<h3>Soluci&oacute;n</h3>
                         <div class="divisor-azul"></div>
                         <ul>
-                        	<li>Se utilizaron cuatro prensas digitales HP Indigo WS6600 y ocho prensas digitales HP Indigo WS6000 a pleno rendimiento para la campaña "Comparte una Coca-Cola®" durante tres meses.</li>
-                            <li>Coca-Cola utilizó una tinta especial, mezclada previamente por HP Indigo y desarrollada específicamente para coincidir con el mítico color rojo que identifica a la compañía.</li>
-                            <li>Eshuis se hizo cargo de todo el proyecto, y empleó ocho conversores de etiquetas digitales para imprimir las áreas de datos variables y 10 impresoras convencionales para imprimir las áreas estáticas.</li>
+                        	<li>Grandes aplicaciones en formatos B2 con calidad offset de la prensa digital HP Indigo 10000.</li>
+                            <li>Las capacidades de Impresión de Data Variabla (VDP) se extienden a un alcance de marketing de 1-a-1 (one-to-one).</li>
+                            <li>Las tintas HP Indigo ElectroInks imprimen en sustratos de especialidad para crear productos innovadores.</li>
+                            <li>La plataforma web-to-print ofrece a sus clientes personalización idónea e impresión bajo demanda.</li>
                         </ul>
                     </div>
                     <div class="bloque-contenido left">
                     	<h3>Resultados</h3>
                         <div class="divisor-azul"></div>
                         <ul>
-                        	<li>Se imprimieron unos 800 millones de etiquetas personalizadas con los 150 nombres más comunes de más de 32 países europeos, en 15 idiomas y cinco alfabetos distintos, siempre con la máxima coherencia en las ocho instalaciones de impresión digital.</li>
-                            <li>El peso y la densidad de las etiquetas terminadas coincidieron con los requisitos de Coca-Cola, lo que permitió que las fábricas de embotellado procesaran a altas velocidades.</li>
-                            <li>La excelente precisión del color de la tinta roja desarrollada por HP permitió que Coca-Cola decidiera usarla como estándar.</li>
+                        	<li>Productos de gran formato con calidad offset con la Prensa Digital HP Indigo 10000 que lograron llegar al 100% del objetivo de las ventas anuales 5 meses antes de finalizar el año fiscal.</li>
+                            <li>Mayor productividad con más cupones y vouchers impresos por página que logran llegar a los tiempos más ajustados para insertos en periódicos, además de un ahorro del 25% utilizando el Modo de Productividad Mejorada (EPM).</li>
                         </ul>
                     </div>
                     <div class="clear"></div>
 
                     <div class="contenido-testimonial">
-                        <p>“Estamos encantados con el color de alta precisión que HP Indigo consiguió a través de sus prensas."</p>
-                        <p>— Gregory Bentley Innovador en embalaje para Europa Coca-Cola Services SA</p>
+                        <p>"Estamos muy felices y los clientes entienden el mayor alcance que ofrece la Prensa Digital HP Indigo 10000 para crear soluciones. A los clientes les encanta la flexibilidad para desarrollar ideas con el formato B2."</p>
+                        <p>— Armando Castilla, Director General de Medio Pliego.</p>
                     </div>
                     <div class="clear"></div>
                     <div class="link-prensa clearfix">
                         <p>Prensa utilizada: </p>
                         <div class="clear"></div>
-                        <a href="WS6600.html">HP Indigo WS6600</a>
+                        <a href="10000.html">HP Indigo 10000</a>
                     </div><!-- link-prensa -->
 
                 </div>
                 <div class="contenido-video">
                     <div class="frame-video video">
                         <video class="[ video-local ]" controls>
-                            <source src="vid/eshuis.mp4" type="video/mp4">
+                            <source src="vid/medio.mp4" type="video/mp4">
                         </video>
                     </div>
                 </div>
                 <!--<div class="contenido-fotos">
                 	 <div class="contenido-slider-historias">
                         <div class="slider">
-                            <img src="images/Eshuis1.JPG" class="slider-item activo" id="1" />
-                            <img src="images/Eshuis2.JPG" class="slider-item" id="2" />
-                            <img src="images/Eshuis3.JPG" class="slider-item"  id="3" />
-                            <img src="images/Eshuis4.JPG" class="slider-item"  id="4" />
+                            <img src="images/margreff1.JPG" class="slider-item activo" id="1" />
+                            <img src="images/margreff2.JPG" class="slider-item" id="2" />
+                            <img src="images/margreff3.JPG" class="slider-item"  id="3" />
                             <a href="#" class="flecha-izq left"><img src="images/prev.png" alt="Previous"></a>
                             <a href="#" class="flecha-der right"><img src="images/next.png" alt="Next"></a>
                             <ul class="control-slider">
                                 <li><a href="#" class="activo" id="control-1"></a></li>
                                 <li><a href="#" id="control-2"></a></li>
                                 <li><a href="#" id="control-3"></a></li>
-                                <li><a href="#" id="control-4"></a></li>
                             </ul>
                         </div>
                     </div>
@@ -200,11 +195,12 @@
         </div><!-- main -->
     </div><!--container-->
     <script type="text/javascript" src="js/jquery.js"></script>
+    <script type="text/javascript" src="js/jRespond.js"></script>
     <script type="text/javascript" src="js/fitvids.js"></script>
     <script type="text/javascript" src="js/indigo.js"></script>
     <script>
-        stopLocalVideo();
+		stopLocalVideo();
         slider();
-    </script>
+	</script>
 </body>
 </html>
