--- a/prensas.html
+++ b/prensas.html
@@ -85,8 +85,7 @@
                         </tr>
                         <tr>
                             <td class="titulo">Gran<br /> Volumen</td>
-                            <td><a href="7600.html">HP Indigo 7600</a>
-                                <a href="7800.html">HP Indigo 7800</a></td>
+                            <td><a href="7800.html">HP Indigo 7800</a></td>
                             <td><a href="10000.html">HP Indigo 10000</a></td>
                             <td>
                                 <a href="ws6600p.html">HP Indigo WS6600p</a>
@@ -116,8 +115,7 @@
                         </tr>
                         <tr>
                             <td class="titulo">Gran Volumen</td>
-                            <td><a href="7600.html">HP Indigo 7600</a>
-                                <a href="7800.html">HP Indigo 7800</a></td>
+                            <td><a href="7800.html">HP Indigo 7800</a></td>
                             <td><a href="10000.html">HP Indigo 10000</a></td>
                             <td>
                                 <a href="ws6600p.html">HP Indigo WS6600p</a>
@@ -136,7 +134,6 @@
                             <td class="titulo"> Volumen medio</td>
                             <td>
                                 <a href="5600.html">HP Indigo 5600</a>
-                                <a href="7600.html">HP Indigo 7600</a>
                                 <a href="7800.html">HP Indigo 7800</a>
                             </td>
                             <td><a href="W7250.html">HP Indigo W7250</a></td>
@@ -162,7 +159,6 @@
                             <td class="titulo"> Volumen medio</td>
                             <td>
                                 <a href="5600.html">HP Indigo 5600</a>
-                                <a href="7600.html">HP Indigo 7600</a>
                                 <a href="7800.html">HP Indigo 7800</a>
                             </td>
                             <td><a href="W7250.html">HP Indigo W7250</a></td>
@@ -185,7 +181,6 @@
                         </tr>
                         <tr>
                             <td><a href="WS4600.html">HP Indigo WS4600</a>
-                                <a href="WS6600.html">HP Indigo WS6600</a>
                                 <a href="WS6800.html">HP Indigo WS6800</a></td>
                             <td><a href="20000.html">HP Indigo 20000</a></td>
                         </tr>
@@ -197,8 +192,7 @@
                             <td class="titulo">Ancho</td>
                         </tr>
                         <tr>
-                            <td><a href="WS6600.html">HP Indigo WS6600</a>
-                                <a href="WS6800.html">HP Indigo WS6800</a></td>
+                            <td><a href="WS6800.html">HP Indigo WS6800</a></td>
                             <td><a href="20000.html">HP Indigo 20000</a></td>
                         </tr>
                     </table>
@@ -211,9 +205,7 @@
                         <tr>
                             <td>
                                 <a href="5600.html">HP Indigo 5600</a>
-                                <a href="7600.html">HP Indigo 7600</a>
                                 <a href="7800.html">HP Indigo 7800</a>
-                                <a href="WS6600.html">HP Indigo WS6600</a>
                                 <a href="WS6800.html">HP Indigo WS6800</a>
                             </td>
                             <td><a href="30000.html">HP Indigo 30000</a></td>
@@ -229,7 +221,6 @@
                         </a>
                         <a class="prensa" href="3550.html"><p>HP Indigo 3550</p></a>
                         <a class="prensa" href="5600.html"><p>HP Indigo 5600</p></a>
-                        <a class="prensa" href="7600.html"><p>HP Indigo 7600</p></a>
                         <a class="prensa" href="7800.html"><p>HP Indigo 7800</p></a>
                         <a class="prensa" href="10000.html"><p>HP Indigo 10000</p></a>
                         <a class="prensa" href="WS6600p.html"><p>HP Indigo WS6600p</p></a>
@@ -241,7 +232,6 @@
                         </a>
                         <a class="prensa" href="3550.html"><p>HP Indigo 3550</p></a>
                         <a class="prensa" href="5600.html"><p>HP Indigo 5600</p></a>
-                        <a class="prensa" href="7600.html"><p>HP Indigo 7600</p></a>
                         <a class="prensa" href="7800.html"><p>HP Indigo 7800</p></a>
                         <a class="prensa" href="10000.html"><p>HP Indigo 10000</p></a>
                         <a class="prensa" href="WS6600p.html"><p>HP Indigo WS6600p</p></a>
@@ -252,7 +242,6 @@
                             Etiquetas
                         </a>
                         <a class="prensa" href="WS4600.html"><p>HP Indigo WS4600</p></a>
-                        <a class="prensa" href="WS6600.html"><p>HP Indigo WS6600</p></a>
                         <a class="prensa" href="WS6800.html"><p>HP Indigo WS6800</p></a>
                         <a class="prensa" href="20000.html"><p>HP Indigo 20000</p></a>
 
@@ -261,7 +250,6 @@
                         <a href="#" id="emp-flexible" class="segmento">
                             Empaque flexible
                         </a>
-                        <a class="prensa" href="WS6600.html"><p>HP Indigo WS6600</p></a>
                         <a class="prensa" href="WS6800.html"><p>HP Indigo WS6800</p></a>
                         <a class="prensa" href="20000.html"><p>HP Indigo 20000</p></a>
 
@@ -272,9 +260,7 @@
                         </a>
 
                         <a class="prensa" href="5600.html"><p>HP Indigo 5600</p></a>
-                        <a class="prensa" href="7600.html"><p>HP Indigo 7600</p></a>
                         <a class="prensa" href="7800.html"><p>HP Indigo 7800</p></a>
-                        <a class="prensa" href="WS6600.html"><p>HP Indigo WS6600</p></a>
                         <a class="prensa" href="WS6800.html"><p>HP Indigo WS6800</p></a>
                         <a class="prensa" href="30000.html"><p>HP Indigo 30000</p></a>
 
@@ -284,7 +270,6 @@
                             Editorial y publicación de libros
                         </a>
                         <a class="prensa" href="5600.html"><p>HP Indigo 5600</p></a>
-                        <a class="prensa" href="7600.html"><p>HP Indigo 7600</p></a>
                         <a class="prensa" href="7800.html"><p>HP Indigo 7800</p></a>
                         <a class="prensa" href="10000.html"><p>HP Indigo 10000</p></a>
                         <a class="prensa" href="W7250.html"><p>HP Indigo W7250</p></a>
@@ -297,7 +282,6 @@
                             Correo directo e impresión transaccional
                         </a>
                         <a class="prensa" href="5600.html"><p>HP Indigo 5600</p></a>
-                        <a class="prensa" href="7600.html"><p>HP Indigo 7600</p></a>
                         <a class="prensa" href="7800.html"><p>HP Indigo 7800</p></a>
                         <a class="prensa" href="10000.html"><p>HP Indigo 10000</p></a>
                         <a class="prensa" href="W7250.html"><p>HP Indigo W7250</p></a>
